# 03_error_info

./: CHANGELOG.md  Cargo.toml  _typos.toml  cliff.toml  test.rest
error-code/: Cargo.toml
error-code-derive/: Cargo.toml
error-code-derive/src/: error_info.rs
error-code/examples/: web.rs
error-code/src/: lib.rs
